[package]
name = "event_auth"
version = "0.1.0"
authors = ["aedius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_event = { git = "https://github.com/horfimbor/mod_event" }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
